--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://officew066:1OZwNJUDFgY0ENZD@cluster0.bk0chcs.mongodb.net/LoanDb?retryWrites=true&w=majority
+MONGO_URI = THIS_IS_SECREAT
 JWT_SECRECTKEY = THIS_IS_SECREAT
